<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:orientation="horizontal"
        android:weightSum="5">

        <Spinner
            android:id="@+id/currency_spinner"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:entries="@array/currencies"
            android:layout_marginLeft="35dp"
            android:textSize="30sp"
            android:textAlignment="inherit"></Spinner>

        <EditText
            android:id="@+id/record_money"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:digits="1234567890."
            android:gravity="center"
            android:inputType="number"
            android:maxLines="1"
            android:text="0.00"
            android:textColor="?attr/colorControlNormal"
            android:textSize="50sp"
            android:textStyle="normal|bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="35dp"
            android:text="@string/category"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@android:color/black"/>

        <Spinner
            android:id="@+id/record_spinner"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:textAlignment="inherit"
            android:layout_marginRight="35dp"
            android:textSize="20sp"></Spinner>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:weightSum="3">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/account"
            android:layout_marginLeft="35dp"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@android:color/black"/>
        <Spinner
            android:id="@+id/account_spinner_record"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:layout_marginRight="35dp"
            android:textAlignment="inherit"></Spinner>
    </LinearLayout>

    <RadioGroup
        android:id="@+id/buttonGroup"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <RadioButton
            android:id="@+id/income_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_marginLeft="35dp"
            android:layout_weight="1"
            android:text="@string/income"/>
        <RadioButton
            android:id="@+id/expense_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_weight="1"
            android:text="@string/expense"/>
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal"
        android:weightSum="5">
        <Button
            android:id="@+id/save_record"
            android:layout_width="40dp"
            android:layout_height="60dp"
            android:layout_weight="2"
            android:layout_gravity="center"
            android:text="@string/action_save"
            android:background="@color/btn_green"
            android:textColor="@color/white"/>
        <TextView
            android:id="@+id/toTest"
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/cancel_record"
            android:layout_width="40dp"
            android:layout_height="60dp"
            android:layout_weight="2"
            android:layout_gravity="center"
            android:background="@android:color/darker_gray"
            android:textColor="@color/white"
            android:text="@string/cancel"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:id="@+id/hide_cur"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:id="@+id/show_test"/>
</LinearLayout>

