<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_space">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/margin_space">

        <TextView
            android:id="@+id/card_name_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card_name"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/card_name_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:orientation="vertical"-->
    <!--android:layout_margin="@dimen/margin_space">-->

    <!--<TextView-->
    <!--android:id="@+id/cardholder_label"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="@string/cardholder_name"-->
    <!--android:textSize="20sp"/>-->

    <!--<EditText-->
    <!--android:id="@+id/cardholder_edit"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"/>-->

    <!--</LinearLayout>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/margin_space">

        <TextView
            android:id="@+id/balance_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/balance"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/balance_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="1234567890."
            android:inputType="number"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/edit_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/padding_space"
        android:layout_gravity="right">

        <TextView
            android:id="@+id/account_edit_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_gravity="end"
            android:padding="12dp"
            android:text="@string/action_save"
            android:textColor="@color/colorPrimary"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:background="?attr/selectableItemBackground"/>

        <TextView
            android:id="@+id/account_edit_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_gravity="end"
            android:padding="12dp"
            android:text="@string/action_delete"
            android:textColor="@color/colorPrimary"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:background="?attr/selectableItemBackground"/>

    </LinearLayout>

</LinearLayout>